# Chuzom

./: .codexignore  .cursorignore  .dockerignore  .env.example  .gitignore  .plugin-scanner.toml  .rules  AUDIT_FINDINGS.txt  CHANGELOG.md  CHANGELOG_v0.3.2.md  CHUZOM_AUDIT_REPORT.md  CHUZOM_ROUTING_FIX_REPORT.md  CONTRIBUTING.md  DEMO_TUI_v0.3.3.md  DEMO_USAGE_GUIDE.md  DESIGN_TUI_UPGRADE_DEMO.md  Dockerfile  KIMI.md  MANIFEST.in  Makefile  PLAN.md  PUBLIC_HARDENING_PHASES.md  README.md  RELEASE.md  RELEASE_v0.3.3.md  ROUTING_HANG_DIAGNOSIS.md  SECURITY.md  SESSION_SUMMARY_2026_06_12.md  STUCK_PATTERNS_ANALYSIS.md  UI_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude-plugin/: .mcp.json  design-tokens.json  marketplace.json  plugin.json
.codex-plugin/: .mcp.json  awesome-ai-plugins-entry.md  marketplace.json  plugin.json
.cursor/rules/: .gitignore  backslash
.factory-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: chuzom.agent.md
.github/workflows/: benchmarks.yml  ci.yml  cleanup-merged-branches.yml  deploy-validate.yml  hol-skill-validate.yml  publish-pypi.yml  publish.yml  routerarena-regression.yml  security.yml  smoke-test.yml  update-stats.yml
.windsurf/: mcp.json
.windsurf/rules/: use-chuzom.md
Docs/: ROUTERARENA_INTEGRATION_PLAN.md  SCENARIO_REPORT.md  V0_3_3_TUI_REDESIGN.md  routerarena_evaluation.py  subagent-routing.md
Docs/assets/: RECORD_DEMO.md
Docs/operations/: RUNBOOK_v1.md
bench/: README.md  __init__.py  __main__.py  judge.py  reporter.py  router_api.py  routers.py  runner.py
bench/corpus/: easy.jsonl  moderate.jsonl
bench/results/: 20260606-150229.json  20260606-150229.md  20260606-152614.json  20260606-152614.md
config/: agents.yaml  models.yaml  signals.yaml
deploy/: README.md  com.chuzom.gateway.plist
deploy/systemd/: chuzom.service
docs-private/audit/: NEXT_SESSION_PLAN.md
routerarena_submission/: README.md
routerarena_submission/config/: chuzom-router.json
routerarena_submission/predictions/: chuzom-router-robustness.json
routerarena_submission/router/: chuzom_router.py
scripts/: agoragentic_deploy_serverless.py  agoragentic_publish_listing.py  agoragentic_register.py  analyze-violations.py  audit_demo.sh  backfill_sidecars.py  benchmark.py  check_public_imports.sh  ci-validate.sh  ci_install_smoke_test.sh  cleanup-hook-health.py  demo_routing.py  eval_classifier.py  gen_cast.py  generate-readme-svgs.py  install.sh  lint_no_direct_llm.py  pre-release-checklist.py  publish-deprecation.sh  publish-pypi.sh  release.py  release.sh  router_isolation_test.sh  routerarena_prep.py  routerarena_submit.py  test_savings_realtime.sh  update_benchmarks.py  verify-plugin-sync.py  verify-release.py  verify.sh  verify_chuzom_hooks.sh  verify_three_checks.sh
scripts/routerarena/: build_robustness.py  build_submission.py  convert_to_jsonl.py  run_sub10_openrouter.py
skills/release/: SKILL.md
skills/routing/: SKILL.md
skills/savings/: SKILL.md
src/chuzom/: __init__.py  admin_actions.py  admin_api.py  audit_routing.py  auto_profile.py  bandit.py  banner.py  banner_art.txt  benchmark_fetcher.py  benchmarks.py  budget.py  budget_backend.py  budget_backend_postgres.py  budget_envelope.py  budget_key.py  budget_store.py  calibration.py  chain_builder.py  classification_allowlist.py  classifier.py  classify.py  claude_jsonl_usage.py  cli.py  cli_init_memory.py  cli_init_policy.py  code_context.py  codex_agent.py  community.py  config.py  context.py  context_optimizer.py  context_prep.py  contract.py  cost.py  dashboard_data.py  digest.py  discover.py  dynamic_routing.py  enforce_config.py  feedback.py  (+96 more)
src/tessera/: __init__.py  auto_profile.py  bandit.py  benchmark_fetcher.py  benchmarks.py  budget.py  budget_store.py  cache.py  calibration.py  chain_builder.py  classifier.py  cli.py  cli_init_memory.py  cli_init_policy.py  code_context.py  codex_agent.py  community.py  config.py  context.py  context_optimizer.py  context_prep.py  contract.py  cost.py  dashboard_data.py  digest.py  discover.py  dynamic_routing.py  forecast.py  gates.py  gemini_cli_agent.py  gemini_cli_quota.py  health.py  hook_client.py  hook_deadlock_checker.py  hook_deadlock_detector.py  hook_health.py  input_validation.py  install_hooks.py  judge.py  lineage.py  (+48 more)
tests/: conftest.py  smoke_test_v0.3.1.sh  test_adaptive_router.py  test_admin_action_audit.py  test_admin_api_skeleton.py  test_admin_llm_usage_bootstrap.py  test_agent_context_routing.py  test_agent_error_hook.py  test_agent_ledger.py  test_agent_ledger_pagination.py  test_agent_loop.py  test_agent_loop_no_shell.py  test_agent_resource_budgeting.py  test_agent_route_hook.py  test_agentic_routing.py  test_agents.py  test_agno_integration.py  test_agoragentic_opt_in.py  test_audit_seq_migration.py  test_audit_v5_fixes.py  test_auto_route_fix_verb.py  test_auto_route_hook.py  test_auto_route_signals.py  test_availability_routing.py  test_backfill_sidecars.py  test_bandit_telemetry.py  test_bench_empty_cascade.py  test_bench_harness.py  test_benchmark_cat_g.py  test_benchmark_fast_path.py  test_benchmark_registry.py  test_budget.py  test_budget_store.py  test_c1_redaction_plugin_seam.py  test_c2_audit_plugin_seam.py  test_cache.py  test_calibration.py  test_cat_f_deferred_sites.py  test_caveman.py  test_cc_usage_track.py  (+245 more)
tests/commands/: test_budget.py  test_config.py  test_dashboard.py  test_doctor.py  test_routing.py  test_set_enforce.py  test_status.py  test_team.py  test_update.py
tests/docs-private/: README.md
tests/enterprise/: test_admin_actions_prune.py  test_admin_api_cli.py  test_admin_api_endpoints.py  test_admin_api_skeleton.py  test_g016_forecast_enterprise_default.py  test_p1_3_audit_seq.py  test_tier1_audit_per_turn.py  test_tier1_identity.py  test_tier2_agent_identity.py
tests/fixtures/: routing_expectations.example.yaml
tests/lineage/: __init__.py  (+6 more)
(+370 files in other folders)
