[project]
name = "chuzom-router"
version = "0.0.2"
description = "Lightweight signal-driven LLM router for Claude Code, Cursor, Codex, Gemini CLI, and Codex CLI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ypollak2", email = "ypollak2@users.noreply.github.com" },
]
keywords = ["chuzom", "llm", "mcp", "router", "ai", "claude-code", "cursor", "codex", "gemini-cli", "model-routing", "mcp-server", "semantic-cache", "signal-router"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "litellm>=1.50.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20.0",
    "aiohttp>=3.9.0",
    "structlog>=24.4.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
]
scripts = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]
tracing = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]
code-context = [
    "tree-sitter>=0.23.0",
    "tree-sitter-languages>=1.10.0",
]
tui = [
    "textual>=0.80.0",
]
# Semantic response cache + embedding-based classifier (v0.1+).
# Pulled in lazily so the bare router stays lightweight.
semantic = [
    "sentence-transformers>=3.0",
    "sqlite-vec>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ypollak2/chuzom"
Repository = "https://github.com/ypollak2/chuzom"
Issues = "https://github.com/ypollak2/chuzom/issues"
Changelog = "https://github.com/ypollak2/chuzom/blob/main/CHANGELOG.md"

[project.scripts]
chuzom = "chuzom.cli:main"
chuzom-sse = "chuzom.server:main_sse"
chuzom-onboard = "chuzom.onboard:main"
chuzom-install-hooks = "chuzom.install_hooks:main"
chuzom-quickstart = "chuzom.quickstart:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chuzom"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".claude/",
    ".claude-plugin/",
    ".codex-plugin/",
    ".factory-plugin/",
    ".serena/",
    ".github/",
    "agents/",
    "skills/",
    "Docs/",
    ".env",
    ".env.example",
    ".env.backup.*",
    "*.bak",
    "*.bak.*",
    "CLAUDE.md",
    "SECURITY.md",
    "uv.lock",
    ".mcp.json",
    "*.png",
    "*.jpg",
    ".gitignore",
    ".gitattributes",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
timeout = 30
filterwarnings = [
    "ignore:Exception in thread.*_connection_worker_thread:pytest.PytestUnhandledThreadExceptionWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"' for fast feedback)",
    "fast: marks tests as fast (run with '-m fast' for quick validation)",
    "integration: marks tests as integration tests (slow external calls)",
    "requires_ollama: marks tests that require local Ollama instance (skip in CI)",
    "requires_api_keys: marks tests that require mocked API keys (skip in CI)",
    "performance: marks tests as performance benchmarks with explicit budgets",
    "mcp_handshake: marks tests that spawn the MCP server as a subprocess",
]
addopts = "-m 'not slow and not requires_ollama and not requires_api_keys' -q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
