[project]
name = "chuzom-router"
version = "0.5.3"
description = "Smart LLM router for Claude Code: save 60-80% of tokens and keep your session alive 3x longer. Auto-routes to Ollama, Codex, and Gemini CLI before spending Claude quota."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ypollak2", email = "ypollak2@users.noreply.github.com" },
]
keywords = ["chuzom", "llm", "mcp", "router", "ai", "claude-code", "cursor", "codex", "gemini-cli", "model-routing", "mcp-server", "semantic-cache", "signal-router"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "litellm>=1.50.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20.0",
    "aiohttp>=3.9.0",
    "structlog>=24.4.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.5",
    "pytest-cov>=5.0",
    "httpx>=0.28.1",
    "ruff>=0.4",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "pytest-cov>=5.0",
]
scripts = [
    "httpx>=0.28.1",
    "pyyaml>=6.0",
]
tracing = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]
code-context = [
    "tree-sitter>=0.23.0",
    "tree-sitter-languages>=1.10.0",
]
tui = [
    "textual>=0.80.0",
    "plotext>=5.2.0",
]
# Multi-instance budget coordination via Postgres (T2-XL1 / Phase 3b).
# Pulled in lazily so the SQLite single-instance default stays minimal.
postgres = [
    "psycopg[binary]>=3.2",
]
# Integration testing for the Postgres backend uses Testcontainers to spin
# up a temporary Postgres in CI. Local runs use the same path. Skipped
# automatically when Docker is unavailable.
postgres-test = [
    "psycopg[binary]>=3.2",
    "testcontainers[postgres]>=4.0",
]
# Semantic response cache + embedding-based classifier (v0.1+).
# Pulled in lazily so the bare router stays lightweight.
semantic = [
    "sentence-transformers>=3.0",
    "sqlite-vec>=0.1.0",
]
# Federated identity — OIDC JWT validation (JWKS / RS256) + SCIM provisioning.
# JWKS + introspection HTTP uses the already-present aiohttp; only PyJWT[crypto]
# is added here so the bare router stays lightweight.
sso = [
    "pyjwt[crypto]>=2.8",
]

[project.urls]
Homepage = "https://github.com/Chuzom/Chuzom"
Repository = "https://github.com/Chuzom/Chuzom"
Issues = "https://github.com/ypollak2/chuzom/issues"
Changelog = "https://github.com/ypollak2/chuzom/blob/main/CHANGELOG.md"

# chuzom-sse intentionally NOT exposed as a console script (SEC-001, audit 2026-06).
# Prior versions installed a binary that bound 0.0.0.0 with no auth and exposed
# the full MCP tool surface (incl. fs + wallet) to anyone reachable on the network.
# main_sse() is retained in chuzom.server for future re-introduction behind
# proper authentication + identity (post-INV-010). Do not re-add chuzom-sse
# here until that wrapper exists. See Docs/audit/FINDINGS.md F-SEC-001.
[project.scripts]
chuzom = "chuzom.cli:main"
chuzom-onboard = "chuzom.onboard:main"
chuzom-install-hooks = "chuzom.install_hooks:main"
chuzom-quickstart = "chuzom.quickstart:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chuzom"]

[tool.hatch.build.targets.sdist]
# CRITICAL: keep this list tight. Per CLAUDE.md package-distribution safety:
#   * Internal docs (CLAUDE.md, AUDIT_FINDINGS.txt, audit reports) must NEVER ship.
#   * Local venvs (.venv*) must NEVER ship — they contain absolute symlinks that
#     break extraction AND can leak local paths.
#   * Dev-only dirs (tests/, scripts/, research/, demo/, Docs/, .audit/,
#     deprecation/) must NEVER ship — end users don't need them.
#   * IDE / plugin configs (.cursor/, .claude/, .codex-plugin/, etc.) must
#     NEVER ship.
# Run `tar tzf dist/*.tar.gz | grep -v /src/` after every build and confirm
# only the survivors below remain.
exclude = [
    # IDE / plugin / agent configs
    ".claude/",
    ".claude-plugin/",
    ".codex-plugin/",
    ".factory-plugin/",
    ".serena/",
    ".github/",
    ".cursor/",
    ".cursorignore",
    # Anchor with leading slash so this matches the top-level
    # ``agents/`` (Claude agent definitions) ONLY — NOT the nested
    # ``src/chuzom/agents/`` package, which IS shipped. Without the
    # anchor, hatch matched ``agents/`` anywhere in the tree and
    # silently stripped a critical runtime module (Loop-5 #5
    # smoke gate caught this on first run).
    "/agents/",
    "/skills/",
    # Internal docs (NEVER ship per CLAUDE.md)
    "Docs/",
    "CLAUDE.md",
    "SECURITY.md",
    "AUDIT_FINDINGS.txt",
    "CHUZOM_AUDIT_REPORT.md",
    "STUCK_PATTERNS_ANALYSIS.md",
    "CHUZOM_ROADMAP.md",
    ".audit/",
    # Infrastructure (deployment-only, not needed for pip install)
    "Dockerfile",
    "docker-compose.yml",
    ".dockerignore",
    # Enterprise source code (public distribution only includes public features)
    "src/chuzom/enterprise/",
    # Dev-only directories
    "tests/",
    "scripts/",
    "research/",
    "demo/",
    "deprecation/",
    "bench/",
    "routerarena_submission/",
    # Local venvs — they contain absolute symlinks and break the build.
    ".venv/",
    ".venv-*/",
    "venv/",
    "venv-*/",
    # Build artefacts
    "dist/",
    "build/",
    "*.egg-info/",
    # Secrets + lockfile + local config
    ".env",
    ".env.example",
    ".env.backup.*",
    "*.bak",
    "*.bak.*",
    "uv.lock",
    ".mcp.json",
    ".gitignore",
    ".gitattributes",
    "**/.gitignore",
    "**/.gitattributes",
    # Binary assets (logos handled via README only)
    "*.png",
    "*.jpg",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
timeout = 30
filterwarnings = [
    "ignore:Exception in thread.*_connection_worker_thread:pytest.PytestUnhandledThreadExceptionWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"' for fast feedback)",
    "fast: marks tests as fast (run with '-m fast' for quick validation)",
    "integration: marks tests as integration tests (slow external calls)",
    "requires_ollama: marks tests that require local Ollama instance (skip in CI)",
    "requires_api_keys: marks tests that require mocked API keys (skip in CI)",
    "performance: marks tests as performance benchmarks with explicit budgets",
    "mcp_handshake: marks tests that spawn the MCP server as a subprocess",
]
addopts = "-m 'not slow and not requires_ollama and not requires_api_keys' -q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
